--- a/doc/DokumenSkripsi/Lampiran/lampD.tex
+++ b/doc/DokumenSkripsi/Lampiran/lampD.tex
@@ -1,1 +1,225 @@
 \chapter{Transkrip Wawancara}
+
+\section{Angkatan 2012}
+\begin{enumerate}
+	\item\textbf{Wilianto Indrawan - 2012730007}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Cukup sering, mungkin banyak di awal perkuliahan, pertengahan, UTS, dan juga UAS.\\ 
+	\textbf{Peneliti:} Biasa untuk apa saja Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Yang pertama itu untuk mengecek jadwal kuliah, ruang kuliah serta dosen, kemudian untuk mengecek jadwal UTS, ruangannya serta UAS juga, dan terakhir mengecek nilai-nilai yang keluar.\\
+	\textbf{Peneliti:} Kemudian kekurangan dari Student Portal apa?\\
+	\textbf{Responden:} Soal tampilan di \textit{mobile view}, sangat sulit mengecek nilai, IP, dan SKS yang diambil sudah berapa banyak karena kita harus menjumlahkannya secara manual. Kemudian juga kita kesulitan ketika harus FRS tetapi menggunakan Mac Book ataupun \textit{mobile phone} karena tampilannya adalah tampilan \textit{mobile}.\\
+	\textbf{Peneliti:} Menurut Anda fitur-fitur apa yang perlu ditambahakan dalam Student Portal?\\
+	\textbf{Responden:} Fitur yang pertama itu mungkin soal tampilan juga. tampilan jadwal kuliah mungkin bisa dibuat dalam bentuk kalendar sehingga mahasiswa bisa melihat bentuknya dengan lebih jelas dibandung sekarang masih dalam bentuk \textit{list} di mana kita harus rekap ulang lagi jadwal-jadwalnya. Kemudian yang kedua itu, ketika FRS atau mungkin PRS kita dapat mengambil mata kuliah secara online, alangkah lebih baik jika kita bisa melihat prasyarat mata kuliahnya apa dan secara otomatis sistem akan mem-\textit{block} jika prasyarat tersebut belum terpenuhi. Kemudian fitur yang ketiga, ini mungkin referensinya dari Student Portal UNPAD di mana di Student Portal UNPAD itu kita bisa upload CV. CV itu berupa kegiatan kita selama di universitas, kemudian keaktifan kita di lingkup universitas sehingga mungkin akan ada satu tampilan khusus yang bisa digunakan oleh perusahaan, di mana perusahaan dapat melihat dan mencari mahasiswa-mahasiswa dengan kriteria tertentu untuk kepentingan. Contohnya untuk beasiswa, mencari pekerjaan ataupun magang dan sebagainya. Mungkin itu saja dari saya.\\
+
+\item\textbf{Ivan - 2012730024}\\
+	\textbf{Peneliti:} Anda sudah sering menggunakan Student Portal?\\
+	\textbf{Responden:} Sudah.\\
+	\textbf{Peneliti:} Menurut Anda, apa kekurangan dari Student Portal dan fitur-fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Menurut saya kekurangan Student Portal yang pertama itu kurang adanya prasyarat mata kuliah. Jadi kadang-kadang kalau kita harus melihat detailnya satu mata kuliah, tampilan itu kurang update jadi harus konfirmasi dulu prasyaratnya gimana. Terus kadang-kadang juga kalo dosen wali daftarin pas lagi PRS di prasyaratnya sudah kita ambil cuma di Portal-nya belum kita ambil jadi harus ke TU lagi gitu.\\
+	\textbf{Peneliti:} Kemudian?\\
+	\textbf{Responden:} Lalu kadang-kadang juga kalo ngeliat nilai kan lewat HP, kalo lewat HP menurut saya \textit{website}-nya masih kurang \textit{mobile friendly}. Kadang-kadang kalo HP saya buka Portal, \textit{default}-nya itu kecil pisan jadi di-\textit{zoom} beberapa kali biar tombol-tombolnya bisa dipencet. Kalo kekecilan kan jadi susah. Maunya ngeklik ini tapi yang diklik malah sebelahnya gitu. Terus kadang-kadang juga Portal-nya sering \textit{down}, ga tau kenapa jadi ga bisa diakses dari luar. Kalo diakses dari luar kadang-kadang CAS-nya yang error. Lalu misalkan pas masa-masa SP, di Student Portal kita kedaftar di SP walaupun sebenarnya kita ga daftar jadi masa-masa SP itu ada di jadwalnya seolah-olah kita ngambil SP walaupun mata kuliahnya ga ada. Pengumunan yang ada di Portal juga kadang-kadang ga diketahui mahasiswa. Kebanyakan di Portal di-\textit{update}-nya pas ada hasil UTS atau hasil ujian gitu. Jadi kalo pengumumannya datang di hari biasa belum tentu dibaca sama mahasiswa. Apalagi yang pengumuman perkuliahan itu saya rasa ga dipakai.\\
+	\textbf{Peneliti:} Untuk fitur-fitur yang perlu ditambahkan?\\
+	\textbf{Responden:} Fitur-fiturnya menurut saya sudah bagus. Di Portal itu sudah mencakup semua kewajiban yang harus dilaksanakan mahasiswa. Seperti misalnya dia bisa daftar PRS terus ganti walaupun dari dosen wali juga. Liat jadwal udah bisa. Jadwal ujian juga keluarnya jauh-jauh hari sebelum ujiannya. Nilai-nilai juga sudah cukup detail, ada ART, UTS, UAS, terus bayar tagihan juga udah ada di situ. Jadi sudah cukup bagus.\\
+	
+	\item\textbf{Florentina - 2012730049}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Untuk Student Portal sih biasanya di awal kuliah sama di awal semester dan akhir semester.\\
+	\textbf{Peneliti:} Biasanya untuk apa saja?\\
+	\textbf{Responden:} Kalo di awal semester biasa untuk FRS kalo di akhir semester biasanya untuk melihat nilai.\\
+	\textbf{Peneliti:} Kemudian menurut Anda apa kekurangan dari Student Portal?\\
+	\textbf{Responden:} Kalo kekurangannya sih kayanya tombol \textit{login}-nya yang terlalu kecil. Udah gitu sama tampilannya kurang menarik aja sih.\\
+	\textbf{Peneliti:} Terus, fitur-fitur apa yang perlu ditambahakan dalam Student Portal?\\
+	\textbf{Responden:} Untuk fitur kayanya harus ada kalendar akademik deh biar tau jadwal-jadwal sepanjang kita kuliah. Udah gitu ada rincian pembayaran juga. Pembayaran untuk apa-apa aja lalu kayanya perlu ada informasi dosen supaya kita kalo kontak dosen ga perlu cari-cari lagi. Terus kalo bisa ada pengumuman, misalnya ada pengumuman apapun bisa muncul \textit{pop-up} gitu di HP atau di laptop kita gitu. Sama satu lagi kayanya enaknya sih ada untuk memunculkan sisa SKS dan berapa SKS lagi yang harus kita ambil.\\
+	
+	\item\textbf{Liptia - 2012730069}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Sering, untuk melihat nilai, daftar FRS, liat jadwal kuliah, hampir setiap hari mungkin liat kalo misalnya habis ujian mau lihat nilai, pasti sering akses Student Portal.\\
+	\textbf{Peneliti:} Menurut Anda kekurangan Student Portal dan perlu ditambah fitur apa saja?\\
+	\textbf{Responden:} Kalo kekurangan mungkin saya bagi dua. Pertama analisis fungsinya sama bagian tampilannya. Kalo untuk fungsi menurut saya terdapat menu yang dirasakan sebaiknya kayaknya dihilangkan saja yaitu menu kuliah, sebelah menu \textit{home}.
+Di menu kuliah itu adalah tempat dimana pengumuman-pengumuman perkuliahan ditampilkan namun saya rasa itu tuh akan lebih baik jika dipindahkan di halaman awal, di \textit{home}.
+Biasanya di \textit{home} itu muncul pengumuman-pengumuman yang diberikan oleh fakultas, saya rasa itu sebaiknya pengumuman yang ada di menu perkuliahan dipindahkan saja di menu \textit{home}.
+Saya pernah ngalamin waktu itu ada pengumuman kuliah DAG ditaruh di menu kuliah ini. Karena saya jarang sekali mengakses menu kuliah tersebut, saya malah ketinggalan informasi karena ketika pertama kali buka Student Portal biasanya yang saya liat hanya pengumuman di awal terus selanjutnya mungkin melihat jadwal di menu-menu sebelah kanan, atau nilai. Saya jarang sekali melihat menu kuliah sehingga tidak ada mahasiswa yang hanya ``aduh saya belum liat pengumuman'', padahal pengumuman tersebut ada di menu kuliah. Kekurangan lainnya ada di nilai, misalnya nih nilainya sudah beberapa yang di-\textit{upload} dan belum di-\textit{upload} untuk hari ini, nah besoknya ada nilai lain yang baru lagi di-\textit{upload}, cuma itu di riwayat per semester itu nilai nya muncul ter-\textit{update}, hanya saja di daftar perkembangan studi itu engga \textit{real time} belum ter-\textit{update} jadi perhitungan IP-nya juga ga \textit{real time}.
+Kekurangan lainnya ada di jadwal kuliah, biasanya itu banyak jadwal kuliah ngga tercantum atau ngga ada nama dosennya. Seharusnya A malah B, misalnya kayak kemarin, kuliah Topik Khusus Informatika 2 seharusnya dosennya Dwikunto, malah yang tertera di Portal itu orang lain, bukan dia. Ada juga mata kuliah PBD seharusnya kan dosennya Falahah di Portal itu malah tertera nama asisten dosennya, bukan dosennya. Itu juga berguna maksudnya kalo kayak kita mau lihat jadwal seluruh fakultas, kita mau lihat semester depan nih dosennya siapa aja. Mata kuliahnya diajar sama dosen siapa aja. Kalau informasinya salah ke kitanya juga jadi bingung. Paling satu lagi yang di menu-menu sebelah kanan, bagian bawah dekat kalendar yang tertera di Portal ada info mahasiswa. Nah, saya sampe sekarang itu ga tau info mahasiswa itu apa dan apa kegunaannya saya masih belum tahu. Kalau misal tampilan, mungkin tombol \textit{logout} sama \textit{login}-nya itu lebih dipertegas. Apalagi pengalaman saya sendiri waktu pertama kali pake Portal, saya nyari-nyari di mana ini tombol \textit{login} sama kaya e-learning juga tombol loginnya susah untuk dikenali. Orang pertama kali buka Portal pasti pas mau masuk pertama kali nyari \textit{login} kan nah bingung ini di mana tombol \textit{login}-nya. Penempatannya udah tepat menurut saya cuma lebih dipertegas aja gitu, lebih diperjelas. Untuk tampilan pengumuman juga di halaman \textit{home} itu ga ada kan pengumuman-pengumuman yang dikasih sama dosen atau tata usaha. Nah, itu tuh udah bagus cuma lebih dipertegas lagi supaya mahasiswa yang pertama kali masuk Student Portal terus liat itu tuh ``oh ini pengumuman penting harus dibaca''. Kalo sekarang engga, ah udahlah ga usah dibaca, dibiarin aja juga ga apa apa. Mungkin tampilan pengumumannya kurang memberikan kesan bahwa pengumuman itu penting jadi dibuat agar supaya ``oh ini pengumuman penting harus dibaca'', kalo bisa kaya gitu. Sama ini, untuk tampilan di Mac sama OS Linux gitu. Kalo saya buka Portal pake OS Mac atau Linux, itu nanti masuknya ke versi \textit{mobile}-nya Student Portal. Kalo bisa sih dibuat biar ga kayak gitu. Biar bisa \textit{compatible} di semua OS.\\
+	
+	\item\textbf{Fariz - 2012730082}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Lumayan sering sih, biasanya buka Student Portal itu kalo ga awal kuliah buat ngecek jadwal, terus sebelum UTS ngecek jadwal UTS sama ruangannya. Terus sama cek jadwal UAS.\\
+	\textbf{Peneliti:} Selain cek jadwal, Anda biasa menggunakan Student Portal untuk apa saja?\\
+	\textbf{Responden:} Yang pertama tadi cek jadwal, biasa buat cek tagihan sih. Cek dosen buat mata kuliah apa yang diambil.\\
+	\textbf{Peneliti:} Kemudian menurut Anda kekurangan dari Student Portal itu apa?\\
+	\textbf{Responden:} Kekurangannya paling di ini sih, untuk pengguna selain Windows itu tuh biasanya kalo kita pengen akses Student Portal itu suka diarahin ke tampilan \textit{mobile view} jadinya infonya ga dapet secara lengkap kayak di Student Portal biasanya.\\
+	\textbf{Peneliti:} Jadi masuk ke m.studetportal ya?\\
+	\textbf{Responden:} Iya m.studetportal bener.\\
+	\textbf{Peneliti:} Kemudian fitur-fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Kalo fitur lebih baik ada ini sih, kaya misalnya kita mau ambil mata kuliah A, nah itu kan ada prasyaratnya terus keluar prasyaratnya udah diambil apa belum. Nah entar itu ngegampangin biar kita ga nyari-nyari ke mana. Jadi langsung di satu tempat informasi udah ada semua.\\
+\end{enumerate}
+
+
+\section{Angkatan 2013}
+\begin{enumerate}
+
+	\item\textbf{Fadhil Ahsan - 2013730003}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Seringnya mungkin pas cek jadwal ya awal awal sama abis UTS dan UAS ya untuk keperluan lihat nilai.\\
+	\textbf{Peneliti:} Selain itu untuk apa Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Ga ada lagi ya, paling kalo pindah kelas MKU doang.\\
+	\textbf{Peneliti:} Kemudian menurut Anda kekurangan Student Portal itu apa sih?\\
+	\textbf{Responden:} Mungkin dari jadwal juga sudah kurang tampilan jadwalnya. Kalo misalnya dilihat dari Student Portal UI, jadwal tuh udah mereka susunin. Jadi sesuai hari, jam segini ada mata kuliah apa jadi kita ga perlu nge-\textit{list} lagi gitu. Jadi udah ada gambarnya, hari ini, jam segini kayak di Excel-nya Pak Lionov gitu tapi ini lebih bagus. Jadi udah langsung, mata kuliah yang kita ambil jadwalnya akan terlihat lebih jelas daripada tulisan.\\
+	\textbf{Peneliti:} Kemudian menurut Anda fitur-fitur apa yang perlu ditambahkan dalam Student Portal?\\
+	\textbf{Responden:} Mungkin kaya pohon kurikulum gitu. Terus mata kuliah ini udah bisa kita ambil apa belum, prasyaratnya apa aja, yang begitu seharusnya ada di situ. Daripada kita harus nyari-nyari di jurusan kaya gimana, bisa diambil atau enggak.\\
+	\textbf{Peneliti:} Supaya bisa tahu juga ya mana yang wajib mana yang tidak.\\
+	\textbf{Responden:}Ya, mana yang wajib, mana yang pilihan, mana yang pilihan wajib. Terus syaratnya apa aja, ada praktikum atau enggak gitu.\\
+	
+	\item\textbf{Vica - 2013730012}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Ga terlalu sering tapi ga jarang juga. Paling kalo mau UTS terus liat jadwal pas pertama kali terus liat nilai UTS, UAS gitu.\\
+	\textbf{Peneliti:} Terus apa kekurangan Student Portal?\\
+	\textbf{Responden:} Ga ada kalendar akademik sama pengumuman kurang dikasih di Portal. Kebanyakan ditempel, padahal orang lebih buka lewat internet gitu daripada yang ditempel.\\
+	\textbf{Peneliti:} Kemudian fitur apa yang perlu ditambahkan dalam Student Portal?\\
+	\textbf{Responden:} Kalendar akademiknya supaya kita tahu kapan libur dan kapan harus bayar untuk tahap 2 begitu.\\
+
+\item\textbf{Gavrila - 2013730025}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Paling kalo pas awal awal liat jadwal, liat UTS, UAS gitu juga sama liat nilai.\\
+	\textbf{Peneliti:} Kemudian apa kekurangan dari Student Portal?\\
+	\textbf{Responden:} Kekurangan dari Student Portal tuh jadwalnya itu bikin bingung, maksud saya tuh ga disusun. Jadi Senin apa aja, Selasa apa aja.\\
+	\textbf{Peneliti:} Kemudian fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Jadwalnya mungkin lebih baik disusun begitu per harinya. Jadi hari Senin mata kuliah apa jam berapa jangan mata kuliah apa hari apa gitu jadi bingung.\\
+	
+	\item\textbf{Rachael - 2013730037}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Sering, lumayan sering.\\
+	\textbf{Peneliti:} Biasa untuk apa saja?\\
+	\textbf{Responden:} Buka jadwal, liat nilai, tagihan.\\
+	\textbf{Peneliti:} Menurut Anda apa kekurangan dari Student Portal?\\
+	\textbf{Responden:} Kurangnya prasyarat mata kuliah, jadi pas FRS tuh mestinya ada \textit{list-list} mata kuliah. Terus misalnya dicek lagi kita semester berapa bisa ga ambil mata kuliah ini. Jadi kita ga perlu cek secara manual.\\
+	\textbf{Peneliti:} Kemudian fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Untuk pengecekan mata kuliah bisa diambil atau ngga\\
+	
+	\item\textbf{Ega Prianto - 2013730047}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Cukup jarang, untuk melihat nilai sama jadwal.\\
+	\textbf{Peneliti:} Jadi kalau menggunakan Student Portal untuk apa saja selain melihat nilai sama jadwal?\\
+	\textbf{Responden:} Lihat tagihan sama lihat dosen wali pas pertama kali masuk.\\
+	\textbf{Peneliti:} Menurut Anda, apa kekurangan dari Student Portal?\\
+	\textbf{Responden:} Yang pertama, pembayaran tagihan ditulisnya langsung pembayaran total. Tidak tahu total bayarannya dapat dari mana. Rincian pembayaran dari berapa SKS tidak dirincikan lebih lanjut lagi. Terus yang kedua, untuk jadwal, di-\textit{sorting} bukan berdasarkan hari tetapi berdasarkan mata kuliahnya. Jadi tiap kali melihat jadwal harus \textit{sorting} sendiri, susah liatnya. Kalendar akademik engga di-\textit{update} terus dapetnya dari dosen wali ato engga wakil dekan gitu. Tiap kali ga di-\textit{update} jadi ga bisa diliat dari situ.\\
+	\textbf{Peneliti:} Kemudian fitur-fitur apa yang perlu ditambahkan dalam Student Portal?\\
+	\textbf{Responden:} Paling yang tadi aja, rincian pembayaran, terus kalendar akademik diperbagus lagi. Terus...\\
+	\textbf{Peneliti:} \textit{Sorting} jadwal ya?\\
+	\textbf{Responden:} Ya, \textit{sorting} jadwal juga, yang lainnya mungkin kalo misalnya untuk nilai udah cukup lah. Cuma berita-berita terbarunya aja suka ga kebaca.\\
+\end{enumerate}
+
+\section{Angkatan 2014}
+\begin{enumerate}
+	\item\textbf{Albert - 201473007}\\
+	\textbf{Peneliti:} Seberapa sering anda menggunakan student portal?\\
+	\textbf{Responden:} Sekitar 4 kali dalam 6 bulan.\\
+	\textbf{Peneliti:} Biasanya untuk apa saja?\\
+	\textbf{Responden:} Untuk mengecek nilai, kalo yang pas awal semester buat ngecek jadwal sama ngecek tagihan sih.\\
+	\textbf{Peneliti:} Kemudian kekurangan Student Portal itu apa?\\
+	\textbf{Responden:} Server suka \textit{down}, \textit{homepage}-nya kurang menarik.\\
+	\textbf{Peneliti:} Menurut Anda fitur-fitur apa saja yang perlu ditambahkan di Student Portal?\\
+	\textbf{Responden:} Fitur-fitur seperti pohon kurikulum mungkin bisa diadain di sana sama prasayarat-prasayarat mata kuliah mungkin bisa dipaparkan di sana.\\
+	
+	\item\textbf{Fedrian - 2014730008}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Buka Student Portal sih jarang, paling cuma buat lihat nilai doang kalo abis UTS UAS sama buat lihat jadwal aja\\
+	\textbf{Peneliti:} Selain itu biasa Anda gunakan untuk apa lagi?\\
+	\textbf{Responden:} Ga ada sih paling pindah kelas MKU kalo ga liat jadwal sama dan nilai aja sih yang pentingnya.\\
+	\textbf{Peneliti:} Kemudian apa kekurangan dari Student Portal?\\
+	\textbf{Responden:} Paling kalo buka di rumah koneksinya sering \textit{down}, udah gitu susah kebuka juga kan di rumah\\
+	\textbf{Peneliti:} Lalu fitur-fitur apa yang perlu ditambahkan dalam Student Portal?\\
+	\textbf{Responden:} Kalo di Student Portal paling, itunya jadwal kuliahnya perlu di-\textit{sort} jadi terurut dari Senin sampe akhir minggu.\\
+	\textbf{Peneliti:} Jadi ga berdasarkan kode mata kuliahnya yah.\\
+	\textbf{Responden:} Iya, jadi disrot jadi gampang liatnya. Sama kalo di \textit{mobile} ditampilin juga sama supaya tampilannya sama sama kayak di komputer.\\
+	
+	\item\textbf{Hereza - 2014730022}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Tidak begitu sering, mungkin seminggu hanya sekali itu saja, untuk melihat nilai.\\
+	\textbf{Peneliti:} Selain melihat nilai biasa untuk apa lagi?\\
+	\textbf{Responden:} Saya biasa untuk melihat jadwal kuliah takut salah.\\
+	\textbf{Peneliti:} Terus kekurangan Student Portal apa saja?\\
+	\textbf{Responden:} Sering \textit{down}, tidak bisa mengakses versi \textit{desktop} dari OS selain Windows,salah satunya Mac atau Linux.\\
+	\textbf{Peneliti:} Kemudian fitur-fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Di dalam Student Portal \textit{mobile} harap ditambahkan menu untuk pindah kelas juga.\\
+	\textbf{Peneliti:} Jadi intinya harus sama seperti yang Student Portal biasa.\\
+	\textbf{Responden:} Harus seperti Student Portal biasa, jangan ada yang dikurangi.\\
+	
+	\item\textbf{Kalas - 2014730039}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Sekitar, jarang sih empat kali per bulan lah.\\
+	\textbf{Peneliti:} Biasa untuk apa saja?\\
+	\textbf{Responden:} Untuk cek jadwal, cek nilai, sama liat tagihan yang kurang.\\
+	\textbf{Peneliti:} Kemudian menurut Anda apa kekurangan dari Student Portal itu?\\
+	\textbf{Responden:} Di hari kayak liburan kadang suka \textit{down}, udah gitu aja.\\
+	\textbf{Peneliti:} Menurut Anda, fitur-fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Prasyarat mata kuliah, terus kalo bisa sih yang jadwal mata kuliah nya itu disesuain sesuai harinya bukan sesuai kode mata kuliahnya.\\
+	
+	\item\textbf{Vincent Eka - 2014730063}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Rata-rata 2 kali sehari.\\
+	\textbf{Peneliti:} Biasa untuk apa saja?\\
+	\textbf{Responden:} Biasanya untuk ngecek jadwal atau mindahin jadwal.\\
+	\textbf{Peneliti:} Kemudian apa kekurangan dari Student Portal?\\
+	\textbf{Responden:} Sering \textit{down} yah, sering \textsl{down} banget susah diakses dari rumah. Apa lagi yah, kayaknya itu doang sih.\\
+	\textbf{Peneliti:} Lalu fitur-fitur apa yang perlu ditambahkan dalam Student Portal?\\
+	\textbf{Responden:} \textit{Sorting} jadwal, itu yang penting susah bacanya soalnya. Kalo bisa koneksinya diperbaiki lagi yah.\\
+\end{enumerate}
+	
+\section{Angkatan 2015}
+\begin{enumerate}
+\item\textbf{Himawan - 2015730009}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Tidak terlalu sering, justru terkadang saja.\\
+	\textbf{Peneliti:} Biasa untuk apa saja kalo menggunakan Student Portal?\\
+	\textbf{Responden:} Untuk melihat jadwal UTS, jadwal UAS, dan jadwal kuliah.\\
+	\textbf{Peneliti:} Kemudian apa kekurangan Student Portal?\\
+	\textbf{Responden:} Sering tidak bisa dibuka.\\
+	\textbf{Peneliti:} Sering \textit{down} ya?\\
+	\textbf{Responden:} Ya.\\
+	\textbf{Peneliti:} Menurut Anda, fitur-fitur apa yang perlu ditambahkan dalam Student Portal?\\
+	\textbf{Responden:} Untuk jadwal kuliahnya paling ditambahin fitur sortir biar lebih mudah sesuai harinya.\\
+	
+	\item\textbf{Mattiew Ariel - 2015730010}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Jarang banget, paling kalo mau liat nilai.\\
+	\textbf{Peneliti:} Biasa untuk apalagi selain liat nilai?\\
+	\textbf{Responden:} Ga ada sih, paling cuma iseng doang.\\
+	\textbf{Peneliti:} Kemudian kekurangan dari Student Portal apa?\\
+	\textbf{Responden:} Pertama, desainnya jelek banget dan kalo saya pencet sesuatu atau tombol-tombolnya kurang enak, menurut saya kurang \textit{simple} gitu.\\
+	\textbf{Peneliti:} Kemudian, fitur-fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Mungkin kayak simulasi pengambilan SKS gitu dan disesuaikan dengan nilai kami, jadi mungkin nilai kami berapa jadi mata kuliah apa saja yang bisa diambil.\\
+	
+	\item\textbf{Sari Ratsmi Jayanti - 2015730037}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} untuk mengakses nilai pada saat UTS.\\
+	\textbf{Peneliti:} Itu saja?\\
+	\textbf{Responden:} Ya.\\
+	\textbf{Peneliti:} Kemudian kekurangannya apa?\\
+	\textbf{Responden:} Kekurangannnya saat saya nge-\textit{login} biasanya harus \textit{advance} dulu jadi kayak harus dua kali ngeklik dulu.\\
+	\textbf{Peneliti:} Yang sertifikat itu ya?\\
+	\textbf{Responden:} Ya yang sertifikat.\\
+	\textbf{Peneliti:} Kemudian fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Fiturnya mungkin kalo tentang rekap nilai harus lebih jelas gitu ga usah ngeklik ke bagian ini kemudian bagian ini.\\
+	
+	\item\textbf{Sutiyoso - 2015730045}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Jarang digunakan, sangat jarang.\\
+	\textbf{Peneliti:} Kemudian kalo menggunakan Student Portal, biasanya untuk apa saja?\\
+	\textbf{Responden:} Biasanya saya hanya menggunakan untuk melihat jadwal ujian dan ya jadwal-jadwal gitu dan ada nilai-nilai yang di sana.\\
+	\textbf{Peneliti:} Kemudian apa kekurangan Student Portal?\\
+	\textbf{Responden:} Student Portal itu mungkin servernya sering \textit{down} yah, dan sewaktu kita membutuhkan, ga bisa kita akses.\\
+	\textbf{Peneliti:} Kemudian fitur-fitur apa yang perlu ditambahkan dalam Student Portal?\\
+	\textbf{Responden:} Mungkin fitur-fitur yang perlu ditambahkan, kita dapat melakukan FRS \textit{online}, karena kan banyak juga mahasiswa yang berasal dari luar Bandung khususnya.\\
+	
+	\item\textbf{Steven Kosasih - 2015730050}\\
+	\textbf{Peneliti:} Seberapa sering Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Hanya saat menjelang ujian dan sesudah ujian.\\
+	\textbf{Peneliti:} Kemudian untuk apa saja Anda menggunakan Student Portal?\\
+	\textbf{Responden:} Untuk melihat nilai dan jadwal-jadwal.\\
+	\textbf{Peneliti:} Lalu kekurangan Student Portal?\\
+	\textbf{Responden:} Misalnya ada guru yang ga masuk gitu, ga semuanya tertera di Student Portal, jadi kita udah ke kampus ternyata ngga ada kelas.\\
+	\textbf{Peneliti:} Kemudian fitur-fitur apa yang perlu ditambahkan?\\
+	\textbf{Responden:} Mungkin fitur-fitur untuk penjadwalan seluruh kegiatan kuliah seperti kapan liburnya, kan bisa minta di TU.\\
+\end{enumerate}
