--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -233,7 +233,22 @@
 % Kata Pengantar: tempat anda menuliskan kata pengantar dan ucapan terima 
 % kasih kepada yang telah membantu anda bla bla bla ....  
 %=============================================================================
-\prakata{\lipsum[3]}
+\prakata{
+	Puji syukur kepada Tuhan Yang Maha Esa atas seluruh berkat yang diberikan kepada penulis sehingga dapat menyelesaikan tugas akhir dengan judul \textbf{Informatika Student Portal: Pengembangan Portal Akademik Mahasiswa untuk Mahasiswa Teknik Informatika UNPAR} dengan baik dan tepat waktu. Penulis juga berterima kasih kepada pihak-pihak yang telah memberikan dukungan dan bantuan kepada penulis dalam menyelesaikan tugas akhir ini, yaitu:
+	\begin{enumerate}
+		\item Orang tua dan keluarga yang selalu memberikan dukungan kepada penulis.
+		\item Bapak Pascal Alfadian sebagai dosen pembimbing yang telah membimbing penulis hingga dapat menyelesaikan tugas akhir ini.
+		\item Bapak Gede Karya dan Ibu Luciana Abednego sebagai dosen penguji yang telah membantu dalam menguji tugas akhir ini.
+		\item Bapak Chandra Wijaya dan rekan-rekan administrator lab komputasi FTIS yang membantu penulis dalam mengembangkan diri. 
+		\item Wilianto Indrawan yang telah memberikan pengetahuan mengenai pemrograman berbasis web.
+		\item Jonathan Surya dan Samuel Lusandi yang telah membantu penulis dalam \textit{alpha testing} dan menemukan bug pada aplikasi Informatika Student Portal.
+		\item Yohan Sture dan Hereza Ardhitya yang telah membantu penulis dalam mengumpulkan responden wawancara.
+		\item Seluruh responden wawancara yang telah membantu dalam pengerjaan tugas akhir ini.
+		\item Teman-teman Teknik Informatika UNPAR angkatan 2012 yang telah berbagi ilmu dan selalu memberikan semangat kepada penulis.
+		\item Pihak-pihak lain yang belum disebutkan, yang berperan dalam penyelesaian tugas akhir ini. 
+	\end{enumerate}
+	Akhir kata, penulis berharap agar tugas akhir ini dapat bermanfaat bagi pembaca yang hendak melakukan penelitian dan pengembangan yang terkait dengan tugas akhir ini.
+}
 %=============================================================================
 
 %_____________________________________________________________________________
